--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <p>© 2026 My Static Website</p>
+        <p>© 2026(January) My Static Website</p>
     </footer>
 
 </body>
